implement feedback changes
