# server/classes/events.js
@@ -34,15 +34,15 @@ export default class Events {
   findOneEvent() {
     const {
       id
-    } = this.req.params.id;
+    } = this.req.params;
     return eventDb
-      .findAll({
+      .findOne({
         where: {
           id: parseInt(id, 10)
         }
       })
       .then((result) => {
-        if (result.length === 0) {
+        if (result === null) {
           return this.res.status(400).json({
             msg: 'Event not found'
           });
@@ -64,38 +64,36 @@ export default class Events {
       });
     }
     eventDb.findOne({
-      where: {
-        location: parseInt(data.location, 10),
-        startDate: {
-          [sequelize.Op.lte]: moment(data.startDate, 'DD-MM-YYYY'),
-          [sequelize.Op.lte]: moment(data.endDate, 'DD-MM-YYYY')
-        },
-        endDate: {
-          [sequelize.Op.gte]: moment(data.startDate, 'DD-MM-YYYY'),
-          [sequelize.Op.gte]: moment(data.endDate, 'DD-MM-YYYY')
+        where: {
+          location: parseInt(data.location, 10),
+          startDate: {
+            [sequelize.Op.lte]: moment(data.startDate, 'DD-MM-YYYY'),
+            [sequelize.Op.lte]: moment(data.endDate, 'DD-MM-YYYY')
+          },
+          endDate: {
+            [sequelize.Op.gte]: moment(data.startDate, 'DD-MM-YYYY'),
+            [sequelize.Op.gte]: moment(data.endDate, 'DD-MM-YYYY')
+          }
         }
-      }
-    })
+      })
       .then((doesExist) => {
-        console.log(doesExist);
         if (doesExist !== null) {
           return this.res.status(400).json({
             msg: 'Center already booked for this period'
           });
         }
         eventDb.create({
-          name: data.name,
-          location: parseInt(data.location, 10),
-          startDate: moment(data.startDate, 'DD-MM-YYYY'),
-          endDate: moment(data.endDate, 'DD-MM-YYYY'),
-          createdBy: parseInt(this.req.verified.id, 10),
-          image: data.image
-        })
+            name: data.name,
+            location: parseInt(data.location, 10),
+            startDate: moment(data.startDate, 'DD-MM-YYYY'),
+            endDate: moment(data.endDate, 'DD-MM-YYYY'),
+            createdBy: parseInt(this.req.verified.id, 10),
+            image: data.image
+          })
           .then(result => this.res.status(201).json({
             val: result,
             msg: 'Event added successfully'
-          }))
-          .catch(error => this.res.status(500).send(error));
+          }));
       })
       .catch((error) => {
         this.res.status(500).send(error);
@@ -134,7 +132,6 @@ export default class Events {
               msg: 'Event deleted'
             });
           })
-          .catch(error => this.res.status(500).send(error));
       })
       .catch(error => this.res.status(500).send(error));
   }
@@ -150,22 +147,22 @@ export default class Events {
         }
       })
       .then((result) => {
-        if (result.length === 0) {
+        if (result === null) {
           return this.res.status(400).json({
             msg: 'Event not found'
           });
         }
         if (data.name) {
           eventDb.findOne({
-            where: {
-              name: data.name,
-              [sequelize.Op.not]: {
-                id
-              },
-            }
-          })
+              where: {
+                name: data.name,
+                [sequelize.Op.not]: {
+                  id
+                },
+              }
+            })
             .then((doesExist) => {
-              if (doesExist.length !== 0) {
+              if (doesExist !== null) {
                 return this.res.status(400).json({
                   msg: 'Event name is not unique'
                 });
@@ -192,21 +189,21 @@ export default class Events {
         }
         // CHECK IF THE CENTER IS BOOKED FOR SELECTED DATES
         eventDb.findOne({
-          where: {
-            location: newValues.location,
-            startDate: {
-              [sequelize.Op.lte]: newValues.startDate,
-              [sequelize.Op.lte]: newValues.endDate
-            },
-            endDate: {
-              [sequelize.Op.gte]: newValues.startDate,
-              [sequelize.Op.gte]: newValues.endDate
-            },
-            [sequelize.Op.not]: {
-              id
+            where: {
+              location: newValues.location,
+              startDate: {
+                [sequelize.Op.lte]: newValues.startDate,
+                [sequelize.Op.lte]: newValues.endDate
+              },
+              endDate: {
+                [sequelize.Op.gte]: newValues.startDate,
+                [sequelize.Op.gte]: newValues.endDate
+              },
+              [sequelize.Op.not]: {
+                id
+              }
             }
-          }
-        })
+          })
           .then((doesExist) => {
             if (doesExist !== null) {
               return this.res.status(400).json({
@@ -236,11 +233,7 @@ export default class Events {
                   val: value,
                   msg: 'Event updated successfully'
                 });
-              })
-              .catch(error => this.res.status(500).send(error));
-          })
-          .catch((error) => {
-            throw error;
+              });
           });
       })
       .catch(error => this.res.status(500).send(error));
